<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="Vision_flags" Id="{5a912f7f-4b59-4f51-bb3e-35e03f16be6e}">
    <Declaration><![CDATA[//struct to save vision flags values system
TYPE Vision_flags :
STRUCT
Flag1 :BOOL:=FALSE;	
Flag2 :BOOL:=FALSE;	
Flag3 :BOOL:=FALSE;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>