<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="ck_bool_value" Id="{04149043-8498-460e-b3b3-29c278d99752}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION ck_bool_value : BOOL
VAR_INPUT
	data: Vision_flags;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF data.Flag2=data.Flag3 OR data.Flag1=data.Flag3 OR data.Flag1=data.Flag2 OR (data.Flag1=data.Flag2 AND data.Flag1=data.Flag3 AND data.Flag2=data.Flag3)  THEN 
	ck_bool_value:=TRUE;
ELSE	
	ck_bool_value:=FALSE;
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="ck_bool_value">
      <LineId Id="30" Count="4" />
      <LineId Id="11" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>